--- a/quiz_app/templates/quiz_app/guest_homepage.html
+++ b/quiz_app/templates/quiz_app/guest_homepage.html
@@ -26,7 +26,7 @@
         <p class="lead col-lg-8 mx-auto">Nền tảng tạo, quản lý và thực hiện các bài thi trắc nghiệm trực tuyến một cách chuyên nghiệp và hiệu quả.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mt-4">
             <a href="#guest-actions" class="btn btn-primary btn-lg px-4 gap-3">Bắt đầu ngay</a>
-            <a href="#member-login" class="btn btn-outline-secondary btn-lg px-4">Đăng nhập</a>
+            <a href="#member-login" class="btn btn-success btn-lg px-4">Đăng nhập</a>
         </div>
     </div>
 
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-    <div class="member-login-section my-5 py-5 bg-light rounded" id="member-login">
+    <div class="member-login-section my-5 py-5 rounded" id="member-login">
         <div class="row">
             <div class="col-lg-6 mx-auto">
                 <h2 class="text-center mb-4">Dành cho Thành viên</h2>
