--- a/quiz_app/templates/quiz_app/guest_base.html
+++ b/quiz_app/templates/quiz_app/guest_base.html
@@ -48,15 +48,15 @@
         }
         
         /* 3. Style cho các ô input để dễ nhìn trên nền tối */
-        .form-control {
+        .card .form-control {
             background-color: rgba(255, 255, 255, 0.15);
             color: white;
             border-color: rgba(255, 255, 255, 0.3);
         }
-        .form-control::placeholder {
+        .card .form-control::placeholder {
             color: #ddd;
         }
-        .form-control:focus {
+        .card .form-control:focus {
             background-color: rgba(255, 255, 255, 0.2);
             color: white;
             border-color: #fff;
