--- a/quiz_app/templates/quiz_app/guest_base.html
+++ b/quiz_app/templates/quiz_app/guest_base.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}QuizApp{% endblock %}</title>
+    <title>{% block title %}MinTest{% endblock %}</title>
+    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
     <link rel="preload" href="{% static 'images/background.jpg' %}" as="image">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
